--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,5 +8,6 @@ sql:
         package: "db"
         out: "db/sqlc"
         emit_json_tags: true
-        emit_interface: true
-        emit_empty_slices: true
+        emit_prepared_queries: false
+        emit_interface: false
+        emit_exact_table_names: false
