--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,8 +6,12 @@ sql:
     gen:
       go:
         package: "db"
+        sql_package: "pgx/v5"
         out: "db/sqlc"
         emit_json_tags: true
-        emit_prepared_queries: false
-        emit_interface: false
-        emit_exact_table_names: false
+        emit_empty_slices: true
+        emit_interface: true
+        overrides:
+          - db_type: "timestamptz"
+            go_type: "time.Time"
+
