--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,7 +7,7 @@ sql:
       go:
         package: "db"
         sql_package: "pgx/v5"
-        out: "db/sqlc"
+        out: "db/sqlc/generated"
         emit_json_tags: true
         emit_empty_slices: true
         emit_interface: true
