--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,23 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+
+
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: 123
+          POSTGRES_DB: boba_shop
+
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+
     steps:
     - uses: actions/checkout@v3
 
@@ -21,6 +38,15 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+
+    - name: Install go-migrate
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migate.linux-amd64 /usr/bin/
+        which migrate
+
+    - name: Run migrations
+      run: make migrateup
 
     - name: Test
       run: make test
