--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-
+    if: ${{ github.event_name == 'push' && contains(github.event.head_commit.modified, 'db/') }}
 
     services:
       postgres:
@@ -52,3 +52,4 @@ jobs:
 
     - name: Test
       run: make test
+
