configure the correct db path for tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' && contains(github.event.head_commit.modified, 'db/') }}
+    if: ${{ github.event_name == 'push' && contains(github.event.head_commit.modified, '/db/') }}
 
     services:
       postgres:
