--- a/app.env
+++ b/app.env
@@ -1,4 +1,5 @@
-
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:123@localhost:5432/boba_shop?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
+TOKEN_SYMMETRIC_KEY=123456789123456789123456789012
+ACCESS_TOKEN_DURATION=15m
